// Vitest Snapshot v1

exports[`math/Matrix4 > can accept args 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
]
`;

exports[`math/Matrix4 > can be set from orthogonal 1`] = `
Matrix4 [
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  -0.2,
  0,
  -0,
  -0,
  -1,
  1,
]
`;

exports[`math/Matrix4 > can be set from orthogonal 2`] = `
Matrix4 [
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  -0.1,
  0,
  -0,
  -0,
  -0,
  1,
]
`;

exports[`math/Matrix4 > can be set from perspective 1`] = `
Matrix4 [
  Infinity,
  0,
  0,
  0,
  0,
  1.7320508075688774,
  0,
  0,
  0,
  0,
  -1.02020202020202,
  -1,
  0,
  0,
  -0.20202020202020202,
  0,
]
`;

exports[`math/Matrix4 > can be set from perspective 2`] = `
Matrix4 [
  Infinity,
  0,
  0,
  0,
  0,
  1.7320508075688774,
  0,
  0,
  0,
  0,
  -1.0101010101010102,
  -1,
  0,
  0,
  -0.10101010101010101,
  0,
]
`;

exports[`math/Matrix4 > can clone itself 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
]
`;

exports[`math/Matrix4 > can compose from a set of properties 1`] = `
[
  1,
  -1.2246467991473532e-16,
  -1.2246467991473532e-16,
  0,
  1.2246467991473532e-16,
  1,
  -1.2246467991473532e-16,
  0,
  1.2246467991473532e-16,
  1.2246467991473532e-16,
  1,
  0,
  1,
  2,
  3,
  1,
]
`;

exports[`math/Matrix4 > can copy a matrix 1`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
]
`;

exports[`math/Matrix4 > can decompose to a set of properties 1`] = `
[
  0,
  0,
  0,
]
`;

exports[`math/Matrix4 > can decompose to a set of properties 2`] = `
[
  0,
  0,
  0,
  1,
]
`;

exports[`math/Matrix4 > can decompose to a set of properties 3`] = `
[
  1,
  1,
  1,
]
`;

exports[`math/Matrix4 > can lookAt a set of vectors 1`] = `
Matrix4 [
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  5,
  1,
]
`;

exports[`math/Matrix4 > can multiply a matrix 1`] = `
[
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
  16,
]
`;

exports[`math/Matrix4 > can multiply a scalar 1`] = `
[
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
  4,
]
`;
